--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "sass-embedded": "^1.93.2",
+    "typescript": "^5.9.3",
     "vite": "^7.1.11",
-    "vite-plugin-vue-devtools": "^8.0.3"
+    "vite-plugin-vue-devtools": "^8.0.3",
+    "vue-tsc": "^3.1.3"
   }
 }
